minor changes in todo comments

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -14,10 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "0d6f0ff4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# necessary initialization\n",
     "%load_ext autoreload\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "979a3fff",
    "metadata": {},
    "outputs": [
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "6b5c4016",
    "metadata": {},
    "outputs": [
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "97b4ced4",
    "metadata": {},
    "outputs": [
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "91044e96",
    "metadata": {},
    "outputs": [
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "16ffefc1",
    "metadata": {},
    "outputs": [
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "ed77ca3e",
    "metadata": {},
    "outputs": [
@@ -352,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "c3b8f53d",
    "metadata": {},
    "outputs": [
@@ -388,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "f3e8cef5",
    "metadata": {},
    "outputs": [
@@ -434,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "3cb1ac8c",
    "metadata": {},
    "outputs": [
@@ -444,14 +453,14 @@
      "text": [
       "Checking Xgrad\n",
       "To save space, printing only randomly selected elements:\n",
-      "analytic grad: tensor([[ 0.1774,  0.0169,  0.0616,  0.1980, -0.0491]])\n",
-      "numerical grad: tensor([[ 0.1764,  0.0143,  0.0620,  0.1955, -0.0477]])\n",
-      "relative error: tensor([[1.7898e-06, 1.3060e-05, 2.5069e-07, 1.2747e-05, 4.2244e-06]])\n",
+      "analytic grad: tensor([[-0.0055,  0.0136, -0.0491, -0.0398,  0.0117]])\n",
+      "numerical grad: tensor([[-0.0048,  0.0143, -0.0477, -0.0381,  0.0095]])\n",
+      "relative error: tensor([[1.1161e-06, 9.8827e-07, 4.2244e-06, 5.1832e-06, 9.5592e-06]])\n",
       "Checking wgrad\n",
       "To save space, printing only randomly selected elements:\n",
-      "analytic grad: tensor([[-4.8611,  4.8180,  4.8180, -4.8611,  1.3811]])\n",
-      "numerical grad: tensor([[-4.8542,  4.8208,  4.8208, -4.8542,  1.3828]])\n",
-      "relative error: tensor([[9.5097e-05, 1.6365e-05, 1.6365e-05, 9.5097e-05, 5.6899e-06]])\n",
+      "analytic grad: tensor([[ 4.8180, -4.8611,  4.8180, -4.8611,  4.8180]])\n",
+      "numerical grad: tensor([[ 4.8208, -4.8542,  4.8208, -4.8542,  4.8208]])\n",
+      "relative error: tensor([[1.6365e-05, 9.5097e-05, 1.6365e-05, 9.5097e-05, 1.6365e-05]])\n",
       "Checking bg\n",
       "analytic grad: 1.6759978532791138\n",
       "numerical grad: tensor([1.6737])\n",
