--- a/feed_forward_net.ipynb
+++ b/feed_forward_net.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "979a3fff",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "e65e8e95",
    "metadata": {},
    "outputs": [
@@ -94,13 +94,16 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 48\u001b[0m\n\u001b[0;32m     40\u001b[0m in_data \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(batch_size, in_features)\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# pass\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m################################################################################\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     46\u001b[0m \n\u001b[0;32m     47\u001b[0m \u001b[38;5;66;03m# forward pass in_data through the layer\u001b[39;00m\n\u001b[1;32m---> 48\u001b[0m outputs \u001b[38;5;241m=\u001b[39m \u001b[43mlinear\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43min_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;66;03m# check outputs for the first two data instances\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYour outputs \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutputs[:\u001b[38;5;241m2\u001b[39m,:]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\HP\\Downloads\\SS24_Assignment1\\ann_code\\layers.py:73\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, ins)\u001b[0m\n\u001b[0;32m     71\u001b[0m         \u001b[38;5;66;03m# Perform linear transformation: X * W^T + b\u001b[39;00m\n\u001b[0;32m     72\u001b[0m \t\t\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mins \u001b[38;5;241m=\u001b[39m ins\n\u001b[1;32m---> 73\u001b[0m \t\t\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mouts \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mt\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mb\n\u001b[0;32m     75\u001b[0m \t\t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mouts\n",
+      "Cell \u001b[1;32mIn[3], line 48\u001b[0m\n\u001b[0;32m     40\u001b[0m in_data \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(batch_size, in_features)\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# pass\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m################################################################################\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     46\u001b[0m \n\u001b[0;32m     47\u001b[0m \u001b[38;5;66;03m# forward pass in_data through the layer\u001b[39;00m\n\u001b[1;32m---> 48\u001b[0m outputs \u001b[38;5;241m=\u001b[39m \u001b[43mlinear\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43min_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;66;03m# check outputs for the first two data instances\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYour outputs \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutputs[:\u001b[38;5;241m2\u001b[39m,:]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\HP\\Downloads\\SS24_Assignment1\\ann_code\\layers.py:58\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, ins)\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[38;5;66;03m# Perform linear transformation: X * W^T + b\u001b[39;00m\n\u001b[0;32m     57\u001b[0m \t\t\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mins \u001b[38;5;241m=\u001b[39m ins\n\u001b[1;32m---> 58\u001b[0m \t\t\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mouts \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mt\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mb\n\u001b[0;32m     60\u001b[0m \t\t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mouts\n",
       "\u001b[1;31mRuntimeError\u001b[0m: both arguments to matmul need to be at least 1D, but they are 2D and 0D"
      ]
     }
    ],
    "source": [
+    "################################### ERROR\n",
+    "\n",
+    "\n",
     "# after implementing Linear class, check it here\n",
     "from ann_code.layers import Linear\n",
     "\n",
@@ -181,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "4c8941aa",
    "metadata": {},
    "outputs": [
@@ -189,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your outputs tensor([[0.2517, 1.2999, 0.0000],\n",
-      "        [1.8404, 0.0000, 0.0000]])\n"
+      "Your outputs tensor([[0.0000, 0.0345, 2.1066],\n",
+      "        [0.0000, 1.1620, 0.0000]])\n"
      ]
     }
    ],
@@ -237,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8ad5a04d",
    "metadata": {},
    "outputs": [
@@ -313,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5f704f6b",
    "metadata": {},
    "outputs": [],
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "97b4ced4",
    "metadata": {},
    "outputs": [
@@ -383,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1a043849",
    "metadata": {},
    "outputs": [
@@ -429,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f8234339",
    "metadata": {},
    "outputs": [
@@ -499,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "78711afc",
    "metadata": {},
    "outputs": [],
@@ -533,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fe77c5cd",
    "metadata": {},
    "outputs": [
@@ -562,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e550b660",
    "metadata": {},
    "outputs": [
